--- a/web/themes/custom/shopsPlus/scss/theme/_theme.scss
+++ b/web/themes/custom/shopsPlus/scss/theme/_theme.scss
@@ -10,7 +10,7 @@
   min-height: 75px;
   position: fixed;
   width: 100%;
-  z-index: 555;
+  z-index: 500;
 
   .container {
     max-width: 100%;
